<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ConversorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tvValorInicio"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvSimboloInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#303030"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvValorFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvSimboloFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#303030"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbInicioEuro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:selectAllOnFocus="false"
                    android:text="@string/strEuro" />

                <RadioButton
                    android:id="@+id/rbInicioDolar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strDolar" />

                <RadioButton
                    android:id="@+id/rbInicioRupia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strRupia" />

                <RadioButton
                    android:id="@+id/rbInicioYen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strYen" />
            </RadioGroup>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/flecha"
            tools:srcCompat="@drawable/flecha" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/rbFinalEuro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strEuro" />

                <RadioButton
                    android:id="@+id/rbFinalDolar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:selectAllOnFocus="false"
                    android:text="@string/strDolar" />

                <RadioButton
                    android:id="@+id/rbFinalRupia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strRupia" />

                <RadioButton
                    android:id="@+id/rbFinalYen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/strYen" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/strConvertir" />

</LinearLayout>